--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -13,3 +13,14 @@
 .logLink:hover{
     text-decoration: underline;
 }
+
+
+
+@media only screen and (max-width: 600px){
+    .regHeader{
+        font-size: 16pt;
+    }
+    .logLink{
+        font-size: 12.5pt;
+    }
+}
