--- a/src/routes/BudgetListPage/BudgetListPage.css
+++ b/src/routes/BudgetListPage/BudgetListPage.css
@@ -6,15 +6,53 @@
     margin-right: auto;
     text-align: center;
     margin-bottom: 40px;
+    color: rgb(105, 104, 104);
+    margin-top: 70px;
+    
 }
+
+#noBudget{
+    background-color: white;
+    padding:40px;
+    margin: 10px;
+    font-size: 24pt;
+    color: rgb(105, 104, 104);
+    box-shadow: 2px 2px 5px gray;
+    -webkit-box-shadow:2px 2px 5px gray;
+    -moz-box-shadow:2px 2px 5px gray;
+    text-align: center;
+    width: 500px;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 100px;
+    font-style: italic;
+}
+
+.budgetHead{
+    margin-top: 30px;
+    background-color: white;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 3px;
+    
+}
+
+.plus{
+    margin-right: 5px;
+}
+
 .addBudget{
-    background-color: rgb(226, 226, 226);
-    width: 700px;
+    background-color: white;
+    width: 100%;
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     margin-bottom: 40px;
+    box-shadow: 2px 2px 5px gray;
+    -webkit-box-shadow:2px 2px 5px gray;
+    -moz-box-shadow:2px 2px 5px gray;
 }
 .newBudget{
     border-radius: 2px;
@@ -23,10 +61,90 @@
     color: rgb(241, 241, 241);
     background-color: rgb(99, 170, 78);
     border: none;
-    font-size: 12pt;
+    font-size: 16pt;
     letter-spacing: 1px;
+    margin-top: -20px;
 }
 .newBudget:hover{
     cursor: pointer;
     background-color: rgb(79, 136, 62);
+}
+
+.mostRecentPurchase{
+    text-decoration: underline;
+}
+
+.pageError{
+    width: 40%;
+    background-color: white;
+    border-radius: 2px;
+    font-size: 20pt;
+}
+
+@media only screen and (max-width: 725px){
+    .budgetRender{
+        width: 97%;
+    }
+    #noBudget{
+        font-size: 20pt;
+        
+    }
+    .addBudget{
+        
+        padding: 10px;
+        
+    }
+    .newBudget{
+        margin-bottom: 20px;
+        font-size: 12pt;
+        
+    }
+}
+
+@media only screen and (max-width: 520px){
+    #noBudget{
+        width: 97%;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    .budgetRender{
+        padding: 5px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .addBudget{
+        background-color: white;
+        width: 100%;
+        height: 70px;
+        padding-bottom: 10px;
+        margin-bottom: 0px;
+        
+    }
+    button.newBudget{
+        position: absolute;
+        margin-left: -65px;
+        font-size: 10pt;
+    }
+    .budgetRender{
+        margin-top: 50px;
+        margin-bottom: 60px;
+    }
+    
+}
+
+@media only screen and (max-width: 400px){
+    .budgetRender{
+        width: 100%;
+        font-size: 10pt;
+    }
+}
+
+@media only screen and (max-width: 325px){
+    #noBudget{
+        font-size: 19.5px;
+    }
 }
