--- a/src/routes/PurchaseListPage/PurchaseListPage.css
+++ b/src/routes/PurchaseListPage/PurchaseListPage.css
@@ -1,10 +1,58 @@
 .purchasePage{
+    
     text-align: center;
+    background-color: rgb(228, 228, 228);
+    min-height: 100% !important;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
+    padding-bottom: 90px;
+    box-shadow: 2px 2px 5px gray;
+    -webkit-box-shadow:2px 2px 5px gray;
+    -moz-box-shadow:2px 2px 5px gray;
+    
 }
+
+.select{
+    width: 160px;
+    border: none;
+    color: rgb(241, 241, 241);
+    background-color: rgb(99, 170, 78);
+    font-size: 13pt;
+    font-weight: bold;
+    padding: 4px;
+    padding-bottom: 6px;
+    padding-left: 10px;
+    letter-spacing: 1px;
+    border-radius: 2px;
+}
+select:hover{
+    background-color: rgb(79, 136, 62);
+    cursor: pointer;
+}
+option{
+    text-align: center;
+    
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.purchaseHistory{
+    font-family: 'Ubuntu';
+}
+
 .purchaseHead{
-    margin-top: 30px;
+   font-size: 20pt;
+    margin-top: -10px;
     color: rgb(105, 104, 104);
+    background-color: white;
     padding: 5px;
+    margin-bottom: 35px;
+    letter-spacing: 2px;
+    
+    
 }
 #category{
     margin-left: auto;
@@ -15,8 +63,13 @@
 .purchaseLabel{
     margin-left: auto;
     margin-right: auto;
+    color: rgb(105, 104, 104);
+    font-size: 16pt;
+    font-weight: bold;
+    
 }
 .addButton{
+    margin-top: -10px;
     display: block;
     text-decoration: none;
     margin-left: auto;
@@ -24,17 +77,50 @@
     border-radius: 2px;
     font-weight: bold;
     padding: 7px;
-    font-size: 11pt;
+    font-size: 13pt;
     letter-spacing: 1px;
-    background-color: rgb(241, 241, 241);
-    margin-bottom: 20px;
+    background-color: rgb(99, 170, 78);
+    margin-bottom: 10px;
     border:none;
+}
+.addButton:hover{
+    background-color: rgb(79, 136, 62);
+    cursor: pointer
 }
 .addLink{
     text-align: center;
     text-decoration: none;
-    color: rgb(99, 170, 78);
+    color: rgb(241, 241, 241);
 }
 .addLink:active{
-    color: rgb(99, 170, 78);
+    color: rgb(241, 241, 241);
+}
+
+@media only screen and (max-width: 725px){
+    .purchasePage{
+        width: 97%;
+    }
+    .purchaseHistory{
+        font-size: 20pt;
+    }
+    .addButton{
+        font-size: 10pt;
+    }
+    .select{
+        font-size: 10pt;
+        width: 105pt;
+    }
+}
+
+@media only screen and (max-width: 550px){
+    .purchaseHistory{
+        font-size: 18pt;
+    }
+    .purchaseLabel{
+        font-size: 14pt;
+        
+    }
+    .addButton{
+        margin-bottom: -5px;
+    }
 }
